# slm-geometry-tikz

./: .env.example  .gitignore  BEHAVIOR_SPEC.md  Copy of Train Your Own Small Learning Model.md  DEMO_WRITEUP.md  EVAL_REVIEW_PREP.md  EXAMPLES.md  ILLUSTRATOR_4B_REPORT.md  ILLUSTRATOR_4B_V2_REPORT.md  ILLUSTRATOR_REPORT.md  PRODUCT.md  README.md  REVIEW_NOTES.md  SUBMISSION.md  VIDEO_SCRIPT.md  WRITEUP.md  pyproject.toml
cards/: dataset_card.md  model_card.md
data/: GOLDEN_SET.md  golden_set.jsonl  golden_set_chat.jsonl
notebooks/: train_colab_unsloth.py
scripts/: _verify_apply_board.mjs  analyze_dataset.py  build_dataset.py  build_golden_set.py  build_illustrator_data.py  build_illustrator_v2_data.py  build_olympiad.py  build_pgf_proto.py  classify_constructions.py  compare_examples.py  copilot.py  copilot_modal.py  demo.py  demo_web.py  difficulty_sweep.py  distill.py  eval_illustrator_v2.py  eval_syn_illustrator.py  evaluate.py  explain_examples.py  generate.py  illustrate_aime.py  infer_illustrator_4b_modal.py  infer_illustrator_modal.py  infer_modal.py  make_worksheet.py  mine_constructions.py  olympiad_sweep.py  publish_hf.py  render_before_after.py  render_examples.py  render_llm_vs_slm.py  run_smoke.py  run_sweep_parallel.sh  score_preds.py  specialist_ceiling_report.py  specialist_difficulty.py  specialist_sweep.py  sweep_report.py  train.py  (+5 more)
src/geotikz/: __init__.py  copilot.py  extract.py  gateway.py  generator.py  harness.py  infer.py  judge.py  metrics.py  olympiad.py  olympiad_ext.py  olympiad_hard.py  scene.py  (+5 more)
web/: app.js  index.html  styles.css
(+3 files in other folders)
