[project]
name = "slm-geometry-tikz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "fastapi[standard]>=0.115.0",
    "gradio==6.20.0",
    "matplotlib>=3.11.0",
    "modal>=1.5.1",
    "numpy>=2.5.1",
    "openai>=2.44.0",
    "peft>=0.19.1",
    "pillow>=12.3.0",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "torch>=2.12.1",
    "transformers>=5.13.0",
    "trl>=1.7.1",
    "uvicorn[standard]>=0.32.0",
]
